--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "scripts": {
+    "watch": "parcel frontend/index.html",
+    "build": "parcel build frontend/index.html"
+  },
   "dependencies": {
     "@elysiajs/cors": "^1.4.0",
     "@libsql/client": "^0.15.15",
     "elysia": "^1.4.13"
   },
   "devDependencies": {
+    "parcel": "^2.16.0",
     "wrangler": "^4.45.1"
   }
 }
