--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "elysia": "^1.4.13"
   },
   "devDependencies": {
+    "@parcel/transformer-elm": "^2.16.0",
     "parcel": "^2.16.0",
     "wrangler": "^4.45.1"
   }
