--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@parcel/transformer-elm": "^2.16.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "parcel": "^2.16.0",
+    "tailwindcss": "^4.1.16",
     "wrangler": "^4.45.1"
   }
 }
