Dockerize the app

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
     "watch": "parcel frontend/index.html",
-    "build": "parcel build frontend/index.html"
+    "build": "parcel build frontend/index.html",
+    "start": "bun run backend/index.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.0",
     "@libsql/client": "^0.15.15",
-    "elysia": "^1.4.13"
+    "elysia": "^1.4.13",
+    "hono": "^4.11.3"
   },
   "devDependencies": {
     "@parcel/transformer-elm": "^2.16.0",
